Migrate JUnit tests to new API using `Sources` instead of `Resources`. This commit does not change the main source code or integration tests. In particular, the old `Resources` is still tested by integration tests.
This commit opportunistically changes the implementation of JUnit tests:

* Use `java.nio.file.Path` instead of String.
* Use `java.nio.file` instead of `org.codehaus.plexus.util.FileUtils`.
* Remove the `org.codehaus.plexus:plexus-utils` dependency.
* Remove unused fields and methods in MOJO stubs.
* Merge classes that become almost empty as a result of above point.